<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="location">Sleman</string>
    <string name="title">PT XYZ</string>
    <string name="info_title">Informasi perubahan data katalog</string>
    <string name="info_contentUpd1">Pembaruan terakhir: </string>
    <string name="info_contentDetail1"> 16-06-2022 15:00:01</string>
    <string name="info_contentUpd2">Pembaruan selanjutnya: </string>
    <string name="info_contentDetail2"> 17-06-2022 15:00:01</string>
    <string name="katalog">Katalog Tender</string>
    <string name="bookmark">Tender Tersimpan</string>
    <string name="chart">Laporan Statistik</string>
    <string name="setting">Pengaturan</string>
</resources>